HTML skeleton plus

--- a/index.html
+++ b/index.html
@@ -1,9 +1,27 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title></title>
-</head>
-<body>
-
+  <head>
+    <title>Dog Party</title>
+  </head>
+  <body>
+    <header>
+      <img src="">
+      <nav>
+      </nav>
+    </header>
+  <main>
+    <section class="banner">      
+    </section>
+    <section class="content">      
+      <article class="column" id="how" >
+      </article>     
+      <article class="column"id="what" >
+      </article>  
+      <article id="how" class="column">
+      </article>        
+    </section>
+  </main>
+  <footer>
+  </footer>
 </body>
 </html>
