--- a/index.html
+++ b/index.html
@@ -5,8 +5,19 @@
   </head>
   <body>
     <header>
-      <img src="">
-      <nav>
+      <img src="images/dog-icon.svg">
+      <nav class="desktop">
+        <ul>
+          <li>How To Dog</li>
+          <li>What is Dog</li>
+          <li>Facts From Dog</li>
+      </nav>
+      <nav class="mobile">
+        <ul>
+          <li>How To Dog</li>
+          <li>What is Dog</li>
+          <li>Facts From Dog</li>
+        </ul>
       </nav>
     </header>
   <main>
