--- a/index.html
+++ b/index.html
@@ -2,23 +2,24 @@
 <html>
   <head>
     <title>Dog Party</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   </head>
   <body>
     <header>
-      <img src="images/dog-icon.svg">
-      <nav class="desktop">
+      <img class="logo" src="images/dog-icon.svg" alt="doggo logo">
         <ul>
-          <li>How To Dog</li>
-          <li>What is Dog</li>
-          <li>Facts From Dog</li>
-      </nav>
+          <li><a href="#">How To Dog</li>
+          <li><a href="#">What is Dog</li>
+          <li><a href="#">Facts From Dog</li>
+        </ul>
       <nav class="mobile">
         <ul>
           <li>How To Dog</li>
           <li>What is Dog</li>
           <li>Facts From Dog</li>
-        </ul>
       </nav>
+      <hr>
     </header>
   <main>
     <section class="banner">      
