updates and background static ghost

--- a/index.html
+++ b/index.html
@@ -9,20 +9,22 @@
     <header>
       <img class="logo" src="images/dog-icon.svg" alt="doggo logo">
         <ul>
-          <li><a href="#">How To Dog</li>
-          <li><a href="#">What is Dog</li>
-          <li><a href="#">Facts From Dog</li>
-        </ul>
-      <nav class="mobile">
-        <ul>
           <li>How To Dog</li>
           <li>What is Dog</li>
           <li>Facts From Dog</li>
-      </nav>
+        </ul>
       <hr>
     </header>
   <main>
-    <section class="banner">      
+    <section class="banner">
+      
+      <h1>A Site About Some Dogs</h1>
+      <form>
+        <input type="text" name="Name">
+        <button>
+          Name This Dog
+        </button>
+      </form>     
     </section>
     <section class="content">      
       <article class="column" id="how" >
