static ghost background and html material

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </header>
   <main>
     <section class="banner">
-      
       <h1>A Site About Some Dogs</h1>
+      <img src="images/dog1-sq.jpg">
       <form>
         <input type="text" name="Name">
         <button>
@@ -28,10 +28,15 @@
     </section>
     <section class="content">      
       <article class="column" id="how" >
+        <img src="images/dog2-sq.jpg">
       </article>     
       <article class="column"id="what" >
+        <img src="images/dog3-sq.jpg">
+
       </article>  
       <article id="how" class="column">
+        <img src="images/dog4-sq.jpg">
+
       </article>        
     </section>
   </main>
