nav and logo at an ok point

--- a/index.html
+++ b/index.html
@@ -3,44 +3,79 @@
   <head>
     <title>Dog Party</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" rel="stylesheet">
   </head>
   <body>
     <header>
       <img class="logo" src="images/dog-icon.svg" alt="doggo logo">
         <ul>
-          <li>How To Dog</li>
-          <li>What is Dog</li>
           <li>Facts From Dog</li>
+          <li>What Is Dogs</li>
+          <li>How To Dog</li>
         </ul>
-      <hr>
     </header>
-  <main>
-    <section class="banner">
-      <h1>A Site About Some Dogs</h1>
-      <img src="images/dog1-sq.jpg">
-      <form>
-        <input type="text" name="Name">
-        <button>
+    <main>
+      <section class="banner">
+        <h1>A Site About <span>Some Dogs</span></h1>
+        <img src="images/dog1-sq.jpg">
+        <form>
+          <input type="text" name="Name">
+          <button>
           Name This Dog
-        </button>
-      </form>     
-    </section>
+          </button>
+        </form>     
+      </section>
     <section class="content">      
-      <article class="column" id="how" >
+      <article class="column how" >
+        <h3>How To Dog</h3>
         <img src="images/dog2-sq.jpg">
+        <p>Dat tungg tho pupperino length
+boy. borkdrive aqua doggo.
+Maximum borkdrive long doggo
+extremely cuuuuuute you are doing
+me the shock borkf, heckin good
+boys doggo doge. The
+neighborhood pupper borkf smol
+corgo long water shoob stop it fren
+boofers pupper heck ruff.</p>
+        <h4>How</h4>
       </article>     
-      <article class="column"id="what" >
+      <article class="column what">
+        <h3>What is Dog</h3>
         <img src="images/dog3-sq.jpg">
-
+        <p>Long doggo smol borking doggo
+with a long snoot for pats
+pupperino h*ck heckin angery
+woofer shoober aqua doggo heck
+doggo aqua doggo most angery
+pupper I have ever seen heckin
+angery woofer pupper. ruff
+adorable doggo very hand that feed
+shibe. Extremely cuuuuuute corgo
+waggy wags stop it fren.</p>
+        <h4>What</h4>
       </article>  
       <article id="how" class="column">
+        <h3>Facts From Dog</h3>
         <img src="images/dog4-sq.jpg">
-
+        <p>Most angery pupper I have ever
+seen such treat heck, dat tungg tho.
+You are doin me a concern shibe
+such treat ruff heck, stop it fren ur
+givin me a spook. Puggorino long
+water shoob dat tungg tho very
+hand that feed shibe long bois he
+made many woofs.</p>
+        <h4>Facts</h4>
       </article>        
     </section>
   </main>
   <footer>
+    <h5>Learn About Dogs Online</h5>
+    <img src="images/twitter.svg">
+    <img src="images/instagram.svg">
+    <img src="images/facebook.svg">
+    <img src="images/linkedin.svg">
   </footer>
 </body>
 </html>
