too much time spent on banner but ok for now

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Dog Party</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -17,18 +17,20 @@
     <main>
       <section class="banner">
         <h1>A Site About <span>Some Dogs</span></h1>
-        <img src="images/dog1-sq.jpg">
+        <img class="dog alpha" src="images/dog1-sq.jpg">
         <form>
+          <p>Name</p>
           <input type="text" name="Name">
           <button>
           Name This Dog
           </button>
         </form>     
       </section>
-    <section class="content">      
+    
+      <section class="content">      
       <article class="column how" >
         <h3>How To Dog</h3>
-        <img src="images/dog2-sq.jpg">
+        <img class="dog" src="images/dog2-sq.jpg">
         <p>Dat tungg tho pupperino length
 boy. borkdrive aqua doggo.
 Maximum borkdrive long doggo
@@ -42,7 +44,7 @@ boofers pupper heck ruff.</p>
       </article>     
       <article class="column what">
         <h3>What is Dog</h3>
-        <img src="images/dog3-sq.jpg">
+        <img class="dog" src="images/dog3-sq.jpg">
         <p>Long doggo smol borking doggo
 with a long snoot for pats
 pupperino h*ck heckin angery
@@ -57,7 +59,7 @@ waggy wags stop it fren.</p>
       </article>  
       <article id="how" class="column">
         <h3>Facts From Dog</h3>
-        <img src="images/dog4-sq.jpg">
+        <img class="dog" src="images/dog4-sq.jpg">
         <p>Most angery pupper I have ever
 seen such treat heck, dat tungg tho.
 You are doin me a concern shibe
