--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1>A Site About <span>Some Dogs</span></h1>
         <img class="dog" src="images/dog1-sq.jpg">
         <form>
-          <p>Name</p>
+          <p class="name">Name</p>
           <input type="text" name="Name">
           <button>
           Name This Dog
@@ -27,24 +27,24 @@
         </form>     
       </section>
       <ul class="content">      
-        <li class="column how">
-          <h3>How To Dog</h3>
-          <img class="dog" src="images/dog2-sq.jpg">
-          <p>Dat tungg tho pupperino length
-boy. borkdrive aqua doggo.
-Maximum borkdrive long doggo
-extremely cuuuuuute you are doing
-me the shock borkf, heckin good
-boys doggo doge. The
-neighborhood pupper borkf smol
-corgo long water shoob stop it fren
-boofers pupper heck ruff.</p>
-          <h4>How</h4>
-        </li>     
+         <li id="facts" class="column">
+          <h3>Facts From Dog</h3>
+          <img class="dog" src="images/dog4-sq.jpg">
+          <p class="woofs">Most angery pupper I have ever
+seen such treat heck, dat tungg tho.
+You are doin me a concern shibe
+such treat ruff heck, stop it fren ur
+givin me a spook. Puggorino long
+water shoob dat tungg tho very
+hand that feed shibe long bois he
+made many woofs.</p>
+           <h4>Facts</h4>
+        </li>
+
         <li class="column what">
           <h3>What is Dog</h3>
          <img class="dog" src="images/dog3-sq.jpg">
-         <p>Long doggo smol borking doggo
+         <p class="woofs">Long doggo smol borking doggo
 with a long snoot for pats
 pupperino h*ck heckin angery
 woofer shoober aqua doggo heck
@@ -55,20 +55,21 @@ adorable doggo very hand that feed
 shibe. Extremely cuuuuuute corgo
 waggy wags stop it fren.</p>
           <h4>What</h4>
-         </li>   
-        <li id="how" class="column">
-          <h3>Facts From Dog</h3>
-          <img class="dog" src="images/dog4-sq.jpg">
-          <p>Most angery pupper I have ever
-seen such treat heck, dat tungg tho.
-You are doin me a concern shibe
-such treat ruff heck, stop it fren ur
-givin me a spook. Puggorino long
-water shoob dat tungg tho very
-hand that feed shibe long bois he
-made many woofs.</p>
-           <h4>Facts</h4>
-        </li>        
+         </li> 
+         <li class="column how">
+          <h3>How To Dog</h3>
+          <img class="dog" src="images/dog2-sq.jpg">
+          <p class="woofs">Dat tungg tho pupperino length
+boy. borkdrive aqua doggo.
+Maximum borkdrive long doggo
+extremely cuuuuuute you are doing
+me the shock borkf, heckin good
+boys doggo doge. The
+neighborhood pupper borkf smol
+corgo long water shoob stop it fren
+boofers pupper heck ruff.</p>
+          <h4>How</h4>
+        </li>          
       </ul>
   </main>
   <footer>
