--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@ boofers pupper heck ruff.</p>
   </main>
   <footer>
     <h5>Learn About Dogs Online</h5>
-    <img src="images/twitter.svg">
-    <img src="images/instagram.svg">
-    <img src="images/facebook.svg">
-    <img src="images/linkedin.svg">
+    <img class="icon" src="images/twitter.svg">
+    <img class="icon" src="images/instagram.svg">
+    <img class="icon" src="images/facebook.svg">
+    <img class="icon" src="images/linkedin.svg">
   </footer>
 </body>
 </html>
